fix: open api schema generation null issue
