# nest-template/src/users/generated-schemas/read-users-orders.schema.ts
@@ -2,9 +2,11 @@ import { GenericComparable, comparable } from '../../geen/lib/comparable';
 import { OrderDirectionSchema, OrderDirectionEnum } from '../../geen/schemas/order.schema';
 import * as v from 'valibot';
 
-export class ReadUsersOrders {}
+export class ReadUsersOrders {
+	name?: OrderDirectionEnum;
+}
 
-const ReadUsersOrdersSchema: v.GenericSchema<ReadUsersOrders> = v.object({});
+const ReadUsersOrdersSchema: v.GenericSchema<ReadUsersOrders> = v.object({ name: v.optional(OrderDirectionSchema) });
 
 export default ReadUsersOrdersSchema;
 
